--- a/notebooks/dischagre_text.ipynb
+++ b/notebooks/dischagre_text.ipynb
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "facfc37d",
    "metadata": {},
    "outputs": [],
@@ -1257,7 +1257,8 @@
     "dic_list = []\n",
     "for j in range (10):\n",
     "    \n",
-    "    dic = {}\n",
+    "    dic = {'subject_id': (dis.loc[j, 'subject_id']),\n",
+    "           'hadm_id' : (dis.loc[j, 'hadm_id'])}\n",
     "    # j = 5\n",
     "    list_subheading = re.findall('\\n(.+):\\n', dis.loc[j,'text'])\n",
     "    list_subheading = list_subheading+['$']\n",
@@ -1282,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "2a7ae0c6",
    "metadata": {},
    "outputs": [
@@ -1307,6 +1308,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>hadm_id</th>\n",
        "      <th>Chief Complaint</th>\n",
        "      <th>Major Surgical or Invasive Procedure</th>\n",
        "      <th>History of Present Illness</th>\n",
@@ -1315,8 +1318,6 @@
        "      <th>Family History</th>\n",
        "      <th>Physical Exam</th>\n",
        "      <th>Discharge</th>\n",
-       "      <th>Pertinent Results</th>\n",
-       "      <th>Brief Hospital Course</th>\n",
        "      <th>...</th>\n",
        "      <th>NECK X-ray ___</th>\n",
        "      <th>SECONDARY DIAGNOSIS</th>\n",
@@ -1333,6 +1334,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>10000032</td>\n",
+       "      <td>22595853</td>\n",
        "      <td>Worsening ABD distension and pain \\n \\n</td>\n",
        "      <td>Paracentesis\\n\\n \\n</td>\n",
        "      <td>___ HCV cirrhosis c/b ascites, hiv on ART, h/o...</td>\n",
@@ -1341,8 +1344,6 @@
        "      <td>She a total of five siblings, but she is not  ...</td>\n",
        "      <td>VS: 98.1 107/61 78 18 97RA  \\nGeneral: in NAD ...</td>\n",
        "      <td>\\nPHYSICAL EXAMINATION:  \\nVS: 98 105/70 95\\nG...</td>\n",
-       "      <td>___ 10:25PM   GLUCOSE-109* UREA N-25* CREAT-0....</td>\n",
-       "      <td>___ HCV cirrhosis c/b ascites, hiv on ART, h/o...</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1357,6 +1358,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>10000032</td>\n",
+       "      <td>22841357</td>\n",
        "      <td>abdominal fullness and discomfort\\n \\n</td>\n",
        "      <td>___ diagnostic paracentesis\\n___ therapeutic p...</td>\n",
        "      <td>___ with HIV on HAART, COPD, HCV cirrhosis com...</td>\n",
@@ -1365,8 +1368,6 @@
        "      <td>She a total of five siblings, but she is not  ...</td>\n",
        "      <td>ADMISSION PHYSICAL EXAM:  \\nVS: T98.1 105/57 7...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>LABS ON ADMISSION:\\n___ 04:10PM BLOOD ___ \\n__...</td>\n",
-       "      <td>___ with HIV on HAART, HCV cirrhosis with asci...</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1381,6 +1382,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>10000032</td>\n",
+       "      <td>29079034</td>\n",
        "      <td>altered mental status\\n \\n</td>\n",
        "      <td>none\\n \\n</td>\n",
        "      <td>Mrs. ___ is a ___ female with HIV on HAART, CO...</td>\n",
@@ -1388,8 +1391,6 @@
        "      <td>___\\n</td>\n",
        "      <td>She a total of five siblings, but she is not  ...</td>\n",
        "      <td>ADMISSION PHYSICAL EXAM:\\nVitals T: 98.7 BP: 8...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ADMISSION LABS:\\n=================\\n___ 06:39A...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -1405,6 +1406,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>10000032</td>\n",
+       "      <td>25742920</td>\n",
        "      <td>Abdominal pain\\n \\n</td>\n",
        "      <td>___ Paracentesis\\n\\n \\n</td>\n",
        "      <td>___ w/ HIV on HAART, COPD on 3L home O2 (thoug...</td>\n",
@@ -1412,8 +1415,6 @@
        "      <td>___\\n</td>\n",
        "      <td>She a total of five siblings, but she is not  ...</td>\n",
        "      <td>ADMISSION PHYSICAL EXAM\\n=====================...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ADMISSION LABS\\n==============\\n___ 09:20PM BL...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -1429,6 +1430,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>10000084</td>\n",
+       "      <td>23052089</td>\n",
        "      <td>Visual hallucinations\\n \\n</td>\n",
        "      <td>N/A\\n\\n \\n</td>\n",
        "      <td>___ male with ___ disease, dyslipidemia, and a...</td>\n",
@@ -1436,8 +1439,6 @@
        "      <td>___\\n</td>\n",
        "      <td>His mother died at age ___ of \"old age.\"\\nHis ...</td>\n",
        "      <td>ADMISSION PHYSICAL EXAM:\\n====================...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ADMISSION LABS:\\n===============\\n___ 10:30PM ...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -1453,6 +1454,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>10000117</td>\n",
+       "      <td>22927623</td>\n",
        "      <td>dysphagia \\n \\n</td>\n",
        "      <td>Upper endoscopy ___\\n\\n \\n</td>\n",
        "      <td>___ w/ anxiety and several years of dysphagia...</td>\n",
@@ -1461,8 +1464,6 @@
        "      <td>+ HTN - father  \\n+ Dementia - father  \\n \\n \\n</td>\n",
        "      <td>=================\\nADMISSION/DISCHARGE EXAM\\n=...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>=============\\nADMISSION LABS\\n=============\\n...</td>\n",
-       "      <td>Ms. ___ is a ___ with history of GERD who pres...</td>\n",
        "      <td>...</td>\n",
        "      <td>IMPRESSION:  \\n  \\nWithin the limitation of pl...</td>\n",
        "      <td>-GERD \\n\\n \\n</td>\n",
@@ -1477,6 +1478,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>10000117</td>\n",
+       "      <td>27988844</td>\n",
        "      <td>Left hip pain \\n \\n</td>\n",
        "      <td>Status post left CRPP ___, ___\\n\\n \\n</td>\n",
        "      <td>REASON FOR CONSULT: Femur fracture\\n\\nHPI: ___...</td>\n",
@@ -1485,8 +1488,6 @@
        "      <td>+ HTN - father  \\n+ Dementia - father  \\n \\n \\n</td>\n",
        "      <td>General: Well-appearing female in no acute dis...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>The patient presented to the emergency departm...</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1501,6 +1502,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>10000248</td>\n",
+       "      <td>20600184</td>\n",
        "      <td>Right flank bruising and pain s/p fall\\n \\n</td>\n",
        "      <td>None\\n\\n \\n</td>\n",
        "      <td>Mr. ___ is a ___ with history of factor VIII d...</td>\n",
@@ -1509,8 +1512,6 @@
        "      <td>The patient's mother had tendency to bleed.  \\...</td>\n",
        "      <td>ON ADMISSION\\nVS:98 120/40 64 20 100RA  \\nGENE...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>ADMISSION, DISCHARGE, PERTINENT LABS:\\n\\n___ 0...</td>\n",
-       "      <td>Mr. ___ is a ___ with history of mild FVIII de...</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1525,6 +1526,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>10000560</td>\n",
+       "      <td>28979390</td>\n",
        "      <td>renal mass\\n \\n</td>\n",
        "      <td>right laparascopic radical nephrectomy- Dr. __...</td>\n",
        "      <td>___ y/o healthy female with incidental finding...</td>\n",
@@ -1533,8 +1536,6 @@
        "      <td>no history of RCC\\n \\n</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>___ 07:15AM BLOOD WBC-7.6 RBC-3.82* Hgb-11.9* ...</td>\n",
-       "      <td>Patient was admitted to Urology after undergoi...</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1549,6 +1550,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>10000764</td>\n",
+       "      <td>27897940</td>\n",
        "      <td>Epistaxis\\n \\n</td>\n",
        "      <td>None\\n\\n \\n</td>\n",
        "      <td>Mr. ___ is an ___ with history of AAA s/p repa...</td>\n",
@@ -1557,8 +1560,6 @@
        "      <td>Patient is unaware of a family history of blee...</td>\n",
        "      <td>ADMISSION:\\nVS: 98.5 142/65 95 18 98RA\\nGENERA...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>ADMISSION:\\n___ 08:15PM BLOOD WBC-11.3* RBC-4....</td>\n",
-       "      <td>Mr. ___ is an ___ with history of AAA s/p repa...</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1573,21 +1574,21 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 43 columns</p>\n",
+       "<p>10 rows × 45 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               Chief Complaint  \\\n",
-       "0      Worsening ABD distension and pain \\n \\n   \n",
-       "1       abdominal fullness and discomfort\\n \\n   \n",
-       "2                   altered mental status\\n \\n   \n",
-       "3                          Abdominal pain\\n \\n   \n",
-       "4                   Visual hallucinations\\n \\n   \n",
-       "5                              dysphagia \\n \\n   \n",
-       "6                          Left hip pain \\n \\n   \n",
-       "7  Right flank bruising and pain s/p fall\\n \\n   \n",
-       "8                              renal mass\\n \\n   \n",
-       "9                               Epistaxis\\n \\n   \n",
+       "   subject_id   hadm_id                              Chief Complaint  \\\n",
+       "0    10000032  22595853      Worsening ABD distension and pain \\n \\n   \n",
+       "1    10000032  22841357       abdominal fullness and discomfort\\n \\n   \n",
+       "2    10000032  29079034                   altered mental status\\n \\n   \n",
+       "3    10000032  25742920                          Abdominal pain\\n \\n   \n",
+       "4    10000084  23052089                   Visual hallucinations\\n \\n   \n",
+       "5    10000117  22927623                              dysphagia \\n \\n   \n",
+       "6    10000117  27988844                          Left hip pain \\n \\n   \n",
+       "7    10000248  20600184  Right flank bruising and pain s/p fall\\n \\n   \n",
+       "8    10000560  28979390                              renal mass\\n \\n   \n",
+       "9    10000764  27897940                               Epistaxis\\n \\n   \n",
        "\n",
        "                Major Surgical or Invasive Procedure  \\\n",
        "0                                Paracentesis\\n\\n \\n   \n",
@@ -1649,41 +1650,17 @@
        "8                                                NaN   \n",
        "9  ADMISSION:\\nVS: 98.5 142/65 95 18 98RA\\nGENERA...   \n",
        "\n",
-       "                                           Discharge  \\\n",
-       "0  \\nPHYSICAL EXAMINATION:  \\nVS: 98 105/70 95\\nG...   \n",
-       "1                                                NaN   \n",
-       "2                                                NaN   \n",
-       "3                                                NaN   \n",
-       "4                                                NaN   \n",
-       "5                                                NaN   \n",
-       "6                                                NaN   \n",
-       "7                                                NaN   \n",
-       "8                                                NaN   \n",
-       "9                                                NaN   \n",
-       "\n",
-       "                                   Pertinent Results  \\\n",
-       "0  ___ 10:25PM   GLUCOSE-109* UREA N-25* CREAT-0....   \n",
-       "1  LABS ON ADMISSION:\\n___ 04:10PM BLOOD ___ \\n__...   \n",
-       "2  ADMISSION LABS:\\n=================\\n___ 06:39A...   \n",
-       "3  ADMISSION LABS\\n==============\\n___ 09:20PM BL...   \n",
-       "4  ADMISSION LABS:\\n===============\\n___ 10:30PM ...   \n",
-       "5  =============\\nADMISSION LABS\\n=============\\n...   \n",
-       "6                                                NaN   \n",
-       "7  ADMISSION, DISCHARGE, PERTINENT LABS:\\n\\n___ 0...   \n",
-       "8  ___ 07:15AM BLOOD WBC-7.6 RBC-3.82* Hgb-11.9* ...   \n",
-       "9  ADMISSION:\\n___ 08:15PM BLOOD WBC-11.3* RBC-4....   \n",
-       "\n",
-       "                               Brief Hospital Course  ...  \\\n",
-       "0  ___ HCV cirrhosis c/b ascites, hiv on ART, h/o...  ...   \n",
-       "1  ___ with HIV on HAART, HCV cirrhosis with asci...  ...   \n",
+       "                                           Discharge  ...  \\\n",
+       "0  \\nPHYSICAL EXAMINATION:  \\nVS: 98 105/70 95\\nG...  ...   \n",
+       "1                                                NaN  ...   \n",
        "2                                                NaN  ...   \n",
        "3                                                NaN  ...   \n",
        "4                                                NaN  ...   \n",
-       "5  Ms. ___ is a ___ with history of GERD who pres...  ...   \n",
-       "6  The patient presented to the emergency departm...  ...   \n",
-       "7  Mr. ___ is a ___ with history of mild FVIII de...  ...   \n",
-       "8  Patient was admitted to Urology after undergoi...  ...   \n",
-       "9  Mr. ___ is an ___ with history of AAA s/p repa...  ...   \n",
+       "5                                                NaN  ...   \n",
+       "6                                                NaN  ...   \n",
+       "7                                                NaN  ...   \n",
+       "8                                                NaN  ...   \n",
+       "9                                                NaN  ...   \n",
        "\n",
        "                                      NECK X-ray ___ SECONDARY DIAGNOSIS  \\\n",
        "0                                                NaN                 NaN   \n",
@@ -1793,10 +1770,10 @@
        "8                                                NaN  \n",
        "9  ___ 07:45AM BLOOD cTropnT-0.04*\\n___ 06:03AM B...  \n",
        "\n",
-       "[10 rows x 43 columns]"
+       "[10 rows x 45 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
